Refactor controllers to use custom ArrayList and HashTable implementations.